# rust-esp32

./: README.md
display/: Cargo.toml
display/src/: main.rs
leds/: Cargo.toml
leds/src/: effects.rs  main.rs
leds/src/effects/: order_shuffle.rs  ribbon_shuffle.rs
wifi/: Cargo.toml  wifi-creds.toml
wifi/src/: display.rs  main.rs  wifi.rs
