[package]
name = "rust-esp-32-test"
version = "0.1.0"
authors = ["Sam Lee <git@cksum.co.uk>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
esp-idf-hal = "0.42.5"
esp-idf-svc = "0.47.3"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
log = "0.4.20"
rand = "0.8.5"

[build-dependencies]
embuild = "0.31.4"
anyhow = "1"
