[package]
name = "rust-esp-32-wifi"
version = "0.1.0"
authors = ["Sam Lee <git@cksum.co.uk>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-graphics = "0.7.1"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
esp-idf-sys = { version = "0.32", features = ["binstart"] }
log = "0.4.17"
ssd1306 = "0.7.1"
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
